Rucipes: add constraints and triggers to existing tables; create image table

--- a/TODO
+++ b/TODO
@@ -13,11 +13,12 @@
     [*] create steps table to store recipe_id, step_id, step_descriptions/content
     [*] create crud API calls for steps
     [*] add number_of_steps field ot recipe struct and table
-[] images
-    [] create image table to store recipe_id, image 
+[*] images
+    [*] create image table to store recipe_id, image
+    [] add endpoint for adding/deleting images for a recipe
 [] complete table setups
     [] timestamp triggers for all tables
-    [] constraints
+    [*] constraints
     [] indexes
     [] idempotency
 [] make it possible to query ingredients
